// Copyright 2022 MobiledgeX, Inc
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
package edgeproto;

import "google/api/annotations.proto";
import "result.proto";
import "tools/protogen/protogen.proto";
import "gogoproto/gogo.proto";
import "app.proto";
import "zonepool.proto";
import "trustpolicy.proto";
import "appinst.proto";
import "cluster.proto";
import "dme/loc.proto";
import "cloudletkey.proto";

option (gogoproto.goproto_unrecognized_all) = false;
option (gogoproto.goproto_unkeyed_all) = false;
option (gogoproto.goproto_sizecache_all) = false;

enum TrustPolicyExceptionState {
  // Unknown state
  TRUST_POLICY_EXCEPTION_STATE_UNKNOWN = 0;
  // Created, Awaiting approval
  TRUST_POLICY_EXCEPTION_STATE_APPROVAL_REQUESTED = 1;
  // Approved by Operator and active
  TRUST_POLICY_EXCEPTION_STATE_ACTIVE = 2;
  // Rejected by Operator
  TRUST_POLICY_EXCEPTION_STATE_REJECTED = 3;
}


message TrustPolicyExceptionKey {
  // App Key
  AppKey app_key = 1 [(gogoproto.nullable) = false, (protogen.keytag) = "appkey", (protogen.refers_to) = "App"];
  // ZonePool Key
  ZonePoolKey zone_pool_key = 2  [(gogoproto.nullable) = false, (protogen.keytag) = "zonepoolkey", (protogen.refers_to) = "ZonePool"];
  // TrustPolicyExceptionKey name
  string name = 3 [(protogen.keytag) = "name"]; 
  option (protogen.generate_matches) = true;
  option (protogen.obj_key) = true;
  option (gogoproto.gostring) = true;
}

message TrustPolicyException {
  // Fields are used for the Update API to specify which fields to apply
  repeated string fields = 1;
  // Unique Key composed of App and ZonePool key
  TrustPolicyExceptionKey key = 2 [(gogoproto.nullable) = false];
  // State of the exception within the approval process
  TrustPolicyExceptionState state = 3;
  // List of outbound security rules for whitelisting traffic
  repeated SecurityRule outbound_security_rules = 4 [(gogoproto.nullable) = false];
  option (protogen.generate_matches) = true;
  option (protogen.generate_cud) = true;
  option (protogen.generate_cud_test) = true;  
  option (protogen.generate_cache) = true;
  option (protogen.notify_cache) = true;
  option (protogen.notify_custom_update) = true;
  option (protogen.notify_filter_cloudlet_key) = true;
  option (protogen.alias) = "name=Key.Name,appname=Key.AppKey.Name,apporg=Key.AppKey.Organization,appvers=Key.AppKey.Version,zonepoolorg=Key.ZonePoolKey.Organization,zonepoolname=Key.ZonePoolKey.Name";
  option (protogen.uses_org) = "key=AppKey.Organization";
}

service TrustPolicyExceptionApi {

  // Create a Trust Policy Exception, by App Developer Organization
  rpc CreateTrustPolicyException(TrustPolicyException) returns (Result) {
    option (google.api.http) = {
      post: "/create/trustpolicyexception"
      body: "*"
    };
    option (protogen.mc2_api) = "ResourceApps,ActionManage,Key.AppKey.Organization";
    option (protogen.mc2_api_requires_org) = "Key.AppKey.Organization";
    option (protogen.method_noconfig) = "State";
  }
  // Update a Trust Policy Exception, by Operator Organization
  rpc UpdateTrustPolicyException(TrustPolicyException) returns (Result) {
    option (google.api.http) = {
      post: "/update/trustpolicyexception"
      body: "*"
    };
    option (protogen.mc2_api) = "ResourceZonePools,ActionManage,Key.ZonePoolKey.Organization";
    option (protogen.mc2_api_requires_org) = "Key.ZonePoolKey.Organization";
    option (protogen.mc2_custom_authz) = true;
  }

  // Delete a Trust Policy Exception, by App Developer Organization
  rpc DeleteTrustPolicyException(TrustPolicyException) returns (Result) {
    option (google.api.http) = {
      post: "/delete/trustpolicyexception"
      body: "*"
    };
    option (protogen.mc2_api) = "ResourceApps,ActionManage,Key.AppKey.Organization";
    option (protogen.method_noconfig) = "State";
  }
  // Show Trust Policy Exceptions. Any fields specified will be used to filter results.
  rpc ShowTrustPolicyException(TrustPolicyException) returns (stream TrustPolicyException) {
    option (google.api.http) = {
      post: "/show/trustpolicyexception"
      body: "*"
    };
    option (protogen.mc2_api) = "ResourceApps,ActionView,Key.AppKey.Organization";
    option (protogen.mc2_custom_authz) = true;
  }
}

message TPEInstanceKey {
  TrustPolicyExceptionKey tpe_key = 1 [(gogoproto.nullable) = false, (protogen.keytag) = "tpestatetpekey"];
  AppInstKey app_inst_key = 2 [(gogoproto.nullable) = false, (protogen.keytag) = "tpestateappinstkey"];
  ClusterKey cluster_key = 3 [(gogoproto.nullable) = false, (protogen.keytag) = "tpestateclusterkey"];
  CloudletKey cloudlet_key = 4 [(gogoproto.nullable) = false, (protogen.keytag) = "tpestatecloudletkey"];

  option (protogen.generate_matches) = true;
  option (protogen.obj_key) = true;
  option (gogoproto.gostring) = true;
}

// TPEState shows the state of an applied TPE instance
message TPEInstanceState {
  TPEInstanceKey key = 1 [(gogoproto.nullable) = false];
  string owner = 2 [(protogen.backend) = true];
  bool run_requested = 3 [(protogen.backend) = true];
  int32 run_count = 4 [(protogen.backend) = true];
  bool tpe_enable = 5 [(protogen.backend) = true];
  string disable_reason = 6 [(protogen.backend) = true];
  string error = 7 [(protogen.backend) = true];
  distributed_match_engine.Timestamp started_at = 99 [(gogoproto.nullable) = false];
  option (protogen.generate_matches) = true;
  option (protogen.generate_cud) = true;
  option (protogen.generate_cache) = true;
  option (protogen.notify_cache) = true;
  option (protogen.notify_custom_update) = true;
  option (protogen.notify_filter_cloudlet_key) = true;
  option (protogen.uses_org) = "key=AppInstKey.Organization";
  option (protogen.ignore_refers_to) = true;
}
